--- a/NetBeansProjects/Lazarus/nbproject/project.properties
+++ b/NetBeansProjects/Lazarus/nbproject/project.properties
@@ -1,11 +1,12 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=lazarus
+application.vendor=noslide
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -24,17 +25,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Lazarus.jar
+dist.jar=${dist.dir}/lazarus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.build-classes=../../Documents/SFSU/Spring 2016/hw 7 - Second Game - Lazarus/Araujo_lazarus/build/classes
 includes=**
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -71,4 +71,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.build-classes}
+src.dir=src
+test.src.dir=test
